// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template utils should inject content blocks 1`] = `
"<mjml>
   <mj-head>
      <mj-font name=\\"Lato\\" href=\\"https://fonts.googleapis.com/css?family=Lato:400,700\\" />
      <mj-style inline=\\"inline\\">
        h1, h2, h3, h4, h5, h6 {
  display:block;
  margin:0;
  padding:0;
}

/* header */
.header__title a {
  text-decoration: none;
  color: inherit;
  white-space: nowrap;
}

.header__desc {
  white-space: nowrap;
  text-align: right;
}
.header__desc__title {
  color: #32363F;
  font-weight: bold;
  font-size: 16px;
  margin-bottom: 4px;
  letter-spacing: 0.5px;
}
.header__desc__subtitle {
  color: #95999D;
  font-size: 14px;
  letter-spacing: 0.4px;
}

.account h3 {
  font-size: 12px;
  font-weight: bold;
  color: #95999D;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
.account h4 {
  font-size: 12px;
  font-weight: normal;
  color: #95999D;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
/* amount */
.amount {
  white-space: nowrap;
  font-size: 16px;
}
.amountPos {
  color: #35CE68;
}
.amountNeg {
  color: #F52D2D;
}
/* footer */
.footer__settings > td > div,
.footer__help > td > div {
  font-size: 12px;
  letter-spacing: 0.6px;
}

.footer__settings > td > div  {
  color: #32363F !important;
}
.footer__help > td > div {
  color: #95999D !important;
  text-align: right !important;
}
.footer__help a {
  display: inline-block;
  color: #95999D !important;
}

.footer__help a + a {
  margin-left: 16px;
}
/* text */
.txtRight {
  text-align: right;
}

/* media */
table {
  border-spacing: 0;
}

.tableRow {
  border-bottom: 1px #D6D8Da solid;
  padding: 8px 0;
  line-height: 1.5;
  letter-spacing: 0.25px;
}

.tableRow {
  border-bottom: 0;
}

.tableRow a, .tableRow a:visited {
  color: inherit;
  text-decoration: none;
}

@media screen and (max-width: 480px) {
  .header__desc__title {
    text-align: center !important;
  }
  .header__desc__subtitle {
    text-align: center !important;
  }
  .header__title > td {
    text-align: center !important;
  }
  .header__title > td > table {
    width: 100px;
    margin: auto;
  }

  .footer__settings > td > div {
    text-align: center !important;
  }

  .footer__help > td > div,
  td.footer__help > div,
  emailHeader {
    text-align: center !important;
  }
  .header__title table {
    margin: 0 auto;
    text-align: center;
  }
}

      </mj-style>
      <mj-attributes>
        <mj-all font-family=\\"Lato, Helvetica, Arial, sans-serif\\"></mj-all>
      </mj-attributes>
   </mj-head>
  <mj-body background-color=\\"#f5f6f7\\">
    <mj-section padding-top=\\"0\\" padding-bottom=\\"0\\">
      <mj-column>
        topLogo
      </mj-column>
    </mj-section>

    <!-- white sheet -->
    <mj-wrapper background-color=\\"white\\" border='1px solid #d6d6d8' border-top=\\"none\\">
      <!-- header -->
      <mj-section padding-bottom=\\"0\\" padding-top=\\"0\\">
        <mj-column>
          <mj-table width=\\"100%\\" css-class=\\"header__title\\" cellpadding='4px'>
            <tr>
              <td width=\\"30px\\">
                <a href=\\"appURL\\">
                  <img align=\\"left\\" width=\\"30px\\" src=\\"logoUrl\\" alt=\\"appName\\" />
                </a>
              </td>
              <td>
                <h1 style=\\"line-height: 32px\\"><a href=\\"appURL\\">appName</a></h1>
              </td>
            </tr>
          </mj-table>
        </mj-column>
        <mj-column css-class=\\"emailHeader\\">
          <mj-text padding-top=\\"0\\" padding-bottom=\\"0\\">
              <div class=\\"header__desc__title txtRight\\">
                emailTitle
              </div>
              <div class=\\"header__desc__subtitle txtRight\\">
                emailSubtitle
              </div>
          </mj-text>
        </mj-column>
      </mj-section>

      <mj-section css-class='before-content' padding-top=\\"8px\\" padding-bottom=\\"8px\\">
        <mj-column>
          <mj-divider border-width=\\"1px\\" border-color=\\"#95999d\\" />
        </mj-column>
      </mj-section>


      <!-- content -->
      content
    </mj-wrapper>

    <!-- footer -->
    <mj-section padding-top=\\"0\\">
      <mj-column>
        
      </mj-column>
      <mj-column>
        <mj-text align='right' css-class=\\"footer__help\\">
          footerHelp
        </mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>



"
`;

exports[`template utils should render parts and full 1`] = `
"<mjml>
   <mj-head>
      <mj-font name=\\"Lato\\" href=\\"https://fonts.googleapis.com/css?family=Lato:400,700\\" />
      <mj-style inline=\\"inline\\">
        h1, h2, h3, h4, h5, h6 {
  display:block;
  margin:0;
  padding:0;
}

/* header */
.header__title a {
  text-decoration: none;
  color: inherit;
  white-space: nowrap;
}

.header__desc {
  white-space: nowrap;
  text-align: right;
}
.header__desc__title {
  color: #32363F;
  font-weight: bold;
  font-size: 16px;
  margin-bottom: 4px;
  letter-spacing: 0.5px;
}
.header__desc__subtitle {
  color: #95999D;
  font-size: 14px;
  letter-spacing: 0.4px;
}

.account h3 {
  font-size: 12px;
  font-weight: bold;
  color: #95999D;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
.account h4 {
  font-size: 12px;
  font-weight: normal;
  color: #95999D;
  text-transform: uppercase;
  letter-spacing: 0.6px;
}
/* amount */
.amount {
  white-space: nowrap;
  font-size: 16px;
}
.amountPos {
  color: #35CE68;
}
.amountNeg {
  color: #F52D2D;
}
/* footer */
.footer__settings > td > div,
.footer__help > td > div {
  font-size: 12px;
  letter-spacing: 0.6px;
}

.footer__settings > td > div  {
  color: #32363F !important;
}
.footer__help > td > div {
  color: #95999D !important;
  text-align: right !important;
}
.footer__help a {
  display: inline-block;
  color: #95999D !important;
}

.footer__help a + a {
  margin-left: 16px;
}
/* text */
.txtRight {
  text-align: right;
}

/* media */
table {
  border-spacing: 0;
}

.tableRow {
  border-bottom: 1px #D6D8Da solid;
  padding: 8px 0;
  line-height: 1.5;
  letter-spacing: 0.25px;
}

.tableRow {
  border-bottom: 0;
}

.tableRow a, .tableRow a:visited {
  color: inherit;
  text-decoration: none;
}

@media screen and (max-width: 480px) {
  .header__desc__title {
    text-align: center !important;
  }
  .header__desc__subtitle {
    text-align: center !important;
  }
  .header__title > td {
    text-align: center !important;
  }
  .header__title > td > table {
    width: 100px;
    margin: auto;
  }

  .footer__settings > td > div {
    text-align: center !important;
  }

  .footer__help > td > div,
  td.footer__help > div,
  emailHeader {
    text-align: center !important;
  }
  .header__title table {
    margin: 0 auto;
    text-align: center;
  }
}

      </mj-style>
      <mj-attributes>
        <mj-all font-family=\\"Lato, Helvetica, Arial, sans-serif\\"></mj-all>
      </mj-attributes>
   </mj-head>
  <mj-body background-color=\\"#f5f6f7\\">
    <mj-section padding-top=\\"0\\" padding-bottom=\\"0\\">
      <mj-column>
            <mj-image width=\\"100px\\" src=\\"https://downcloud.cozycloud.cc/upload/cozy-banks/email-assets/logo-cozy.png\\" />

      </mj-column>
    </mj-section>

    <!-- white sheet -->
    <mj-wrapper background-color=\\"white\\" border='1px solid #d6d6d8' border-top=\\"none\\">
      <!-- header -->
      <mj-section padding-bottom=\\"0\\" padding-top=\\"0\\">
        <mj-column>
          <mj-table width=\\"100%\\" css-class=\\"header__title\\" cellpadding='4px'>
            <tr>
              <td width=\\"30px\\">
                <a href=\\"\\">
                  <img align=\\"left\\" width=\\"30px\\" src=\\"    https://downcloud.cozycloud.cc/upload/cozy-banks/email-assets/logo-my-app.png
\\" alt=\\"    My app
\\" />
                </a>
              </td>
              <td>
                <h1 style=\\"line-height: 32px\\"><a href=\\"\\">    My app
</a></h1>
              </td>
            </tr>
          </mj-table>
        </mj-column>
        <mj-column css-class=\\"emailHeader\\">
          <mj-text padding-top=\\"0\\" padding-bottom=\\"0\\">
              <div class=\\"header__desc__title txtRight\\">
                    My email title

              </div>
              <div class=\\"header__desc__subtitle txtRight\\">
                    Hello Homer !

              </div>
          </mj-text>
        </mj-column>
      </mj-section>

      <mj-section css-class='before-content' padding-top=\\"8px\\" padding-bottom=\\"8px\\">
        <mj-column>
          <mj-divider border-width=\\"1px\\" border-color=\\"#95999d\\" />
        </mj-column>
      </mj-section>


      <!-- content -->
          <mj-section>
      <mj-column>
        <mj-text>
          <h1>Title 1</h1>
          <h2>Title 2</h2>
          <p>Paragraph 1</p>
        </mj-text>
      </mj-column>
    </mj-section>
    <mj-section>
      <mj-column>
        <mj-text><p>Paragraph 2</p></mj-text>
      </mj-column>
    </mj-section>

    </mj-wrapper>

    <!-- footer -->
    <mj-section padding-top=\\"0\\">
      <mj-column>
        
      </mj-column>
      <mj-column>
        <mj-text align='right' css-class=\\"footer__help\\">
              <a href=\\"https://homer-myapp.mycozy.cloud\\">Go to app</a> -
    <a href=\\"https://homer-settings.mycozy.cloud\\">Go to settings</a>

        </mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>



"
`;
